@@ -19,28 +19,20 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 package net.sourceforge.ganttproject.task;
 
 import biz.ganttproject.core.calendar.AlwaysWorkingTimeCalendarImpl;
-import biz.ganttproject.core.calendar.GPCalendar.DayMask;
-import biz.ganttproject.core.calendar.GPCalendar.DayType;
 import biz.ganttproject.core.calendar.GPCalendarCalc;
-import biz.ganttproject.core.calendar.GPCalendarCalc.MoveDirection;
 import biz.ganttproject.core.chart.render.ShapePaint;
-import biz.ganttproject.core.time.CalendarFactory;
 import biz.ganttproject.core.time.GanttCalendar;
 import biz.ganttproject.core.time.TimeDuration;
 import biz.ganttproject.core.time.TimeDurationImpl;
 import biz.ganttproject.core.time.impl.GPTimeUnitStack;
 import biz.ganttproject.customproperty.CustomColumnsValues;
 import com.google.common.collect.ImmutableList;
-import kotlin.Unit;
-import kotlin.jvm.functions.Function0;
 import net.sourceforge.ganttproject.GPLogger;
 import net.sourceforge.ganttproject.chart.MilestoneTaskFakeActivity;
 import net.sourceforge.ganttproject.document.AbstractURLDocument;
 import net.sourceforge.ganttproject.document.Document;
 import net.sourceforge.ganttproject.task.algorithm.AlgorithmCollection;
-import net.sourceforge.ganttproject.task.algorithm.AlgorithmException;
 import net.sourceforge.ganttproject.task.algorithm.CostAlgorithmImpl;
-import net.sourceforge.ganttproject.task.algorithm.ShiftTaskTreeAlgorithm;
 import net.sourceforge.ganttproject.task.dependency.*;
 import net.sourceforge.ganttproject.task.hierarchy.TaskHierarchyItem;
 import org.eclipse.core.runtime.IStatus;
@@ -48,9 +40,12 @@ import org.eclipse.core.runtime.Status;
 import org.jetbrains.annotations.NotNull;
 
 import java.awt.*;
-import java.io.*;
+import java.io.File;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.math.BigDecimal;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.*;
 
@@ -85,7 +80,7 @@ public class TaskImpl implements Task {
 
   TimeDuration myLength;
 
-  private final List<TaskActivity> myActivities = new ArrayList<TaskActivity>();
+  private final List<TaskActivity> myActivities = new ArrayList<>();
 
   private boolean bExpand;
 
@@ -190,13 +185,12 @@ public class TaskImpl implements Task {
 
   @Override
   public Task unpluggedClone() {
-    TaskImpl result = new TaskImpl(myManager, this, true, this.myID, this.myUid) {
+    return new TaskImpl(TaskImpl.this.myManager, TaskImpl.this, true, TaskImpl.this.myID, TaskImpl.this.myUid) {
       @Override
       public boolean isSupertask() {
         return false;
       }
     };
-    return result;
   }
 
   @Override
@@ -211,6 +205,11 @@ public class TaskImpl implements Task {
     }
     myMutator = new MutatorImpl(myManager, this, getManager().createTaskUpdateBuilder(this));
     return myMutator;
+  }
+
+  @Override
+  public ShiftMutator createShiftMutator() {
+    return new ShiftMutatorImpl(this);
   }
 
   @Override
@@ -244,7 +243,7 @@ public class TaskImpl implements Task {
   @Override
   public List<Document> getAttachments() {
     if (getWebLink() != null && !"".equals(getWebLink())) {
-      return Collections.singletonList((Document) new AbstractURLDocument() {
+      return Collections.singletonList(new AbstractURLDocument() {
         @Override
         public boolean canRead() {
           return true;
@@ -261,12 +260,12 @@ public class TaskImpl implements Task {
         }
 
         @Override
-        public InputStream getInputStream() throws IOException {
+        public InputStream getInputStream() {
           return null;
         }
 
         @Override
-        public OutputStream getOutputStream() throws IOException {
+        public OutputStream getOutputStream() {
           return null;
         }
 
@@ -293,12 +292,8 @@ public class TaskImpl implements Task {
               return null;
             }
             URL relative = new URL(context, getWebLink());
-            return new URI(URLEncoder.encode(relative.toString(), "utf-8"));
-          } catch (URISyntaxException e) {
-            // Do nothing
-          } catch (MalformedURLException e) {
-            // Do nothing
-          } catch (UnsupportedEncodingException e) {
+            return new URI(URLEncoder.encode(relative.toString(), StandardCharsets.UTF_8));
+          } catch (URISyntaxException | MalformedURLException e) {
             // Do nothing
           }
           return null;
@@ -315,7 +310,7 @@ public class TaskImpl implements Task {
         }
 
         @Override
-        public void write() throws IOException {
+        public void write() {
         }
       });
     }
@@ -558,6 +553,7 @@ public class TaskImpl implements Task {
     myStart = start;
     recalculateActivities();
     adjustNestedTasks();
+    System.out.println("task="+getTaskID()+" start="+myStart+" end="+myEnd+" activities="+getActivities());
   }
 
   void adjustNestedTasks() {
@@ -597,22 +593,6 @@ public class TaskImpl implements Task {
   public void setThirdDateConstraint(int thirdDateConstraint) {
     myThirdDateConstraint = thirdDateConstraint;
   }
-
-  @Override
-  public void shift(TimeDuration shift) {
-    doShift(shift);
-  }
-
-  Function0<Unit> doShift(TimeDuration shift) {
-    var shiftAlgorithm = new ShiftTaskTreeAlgorithm(myManager);
-    try {
-      return shiftAlgorithm.run(Collections.singletonList(this), shift, true);
-    } catch (AlgorithmException e) {
-      throw new RuntimeException(e);
-    }
-  }
-
-
   @Override
   public void setDuration(TimeDuration length) {
     assert length.getLength() >= 0 : "An attempt to set length=" + length + " to task=" + this;
@@ -624,24 +604,6 @@ public class TaskImpl implements Task {
 
   Date shiftDate(Date input, TimeDuration duration) {
     return myManager.getConfig().getCalendar().shiftDate(input, duration);
-  }
-
-  @Override
-  public TimeDuration translateDuration(TimeDuration duration) {
-    return myManager.createLength(myLength.getTimeUnit(), translateDurationValue(duration));
-  }
-
-  private float translateDurationValue(TimeDuration duration) {
-    if (myLength.getTimeUnit().equals(duration.getTimeUnit())) {
-      return duration.getValue();
-    }
-    if (myLength.getTimeUnit().isConstructedFrom(duration.getTimeUnit())) {
-      return duration.getValue() / myLength.getTimeUnit().getAtomCount(duration.getTimeUnit());
-    }
-    if (duration.getTimeUnit().isConstructedFrom(myLength.getTimeUnit())) {
-      return duration.getValue() * duration.getTimeUnit().getAtomCount(myLength.getTimeUnit());
-    }
-    throw new RuntimeException("Can't translate duration=" + duration + " into units=" + myLength.getTimeUnit());
   }
 
   private void recalculateActivities() {
@@ -754,30 +716,6 @@ public class TaskImpl implements Task {
   @Override
   public boolean isCritical() {
     return this.critical;
-  }
-
-  // TODO: implementation of this method has no correlation with algorithms
-  // recalculating schedules,
-  // doesn't affect subtasks and supertasks. It is necessary to call this
-  // method explicitly from other
-  // parts of code to be sure that constraint fulfills
-  @Override
-  public void applyThirdDateConstraint() {
-//    if (getThird() != null)
-//      switch (getThirdDateConstraint()) {
-//      case EARLIESTBEGIN:
-//        if (getThird().after(getStart())) {
-//          shift(myManager.getTimeUnitStack().createDuration(getDuration().getTimeUnit(), getStart().getTime(), getThird().getTime()));
-//        }
-//        break;
-//      }
-  }
-
-  TaskInfo myTaskInfo;
-
-  @Override
-  public TaskInfo getTaskInfo() {
-    return myTaskInfo;
   }
 
   @Override
